testsuite/poke.pkl/arrays-initializer-diag-1.pk
/* { dg-do compile } */

var a = 10;
[.[2 + a] = 666]; /* { dg-error "constant" } */
